[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/player/turretgreen.png" type="Texture" id=1]
[ext_resource path="res://scripts/Tower.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 21.5877

[sub_resource type="CircleShape2D" id=2]
radius = 28.1445

[sub_resource type="Animation" id=3]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GreenTower" type="StaticBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )
health = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"building",
]]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=[
"green",
"tower",
]]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="RegenTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_RegenTimer_timeout"]
